err/pika-simple-daemon.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mock-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/pika'...
Listing './lib/python3.5/site-packages/pika/adapters'...
Compiling './lib/python3.5/site-packages/pika/adapters/base_connection.py'...
***   File "./lib/python3.5/site-packages/pika/adapters/base_connection.py", line 108
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pika/adapters/select_connection.py'...
***   File "./lib/python3.5/site-packages/pika/adapters/select_connection.py", line 221
    except select.error, error:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pika/adapters/tornado_connection.py'...
***   File "./lib/python3.5/site-packages/pika/adapters/tornado_connection.py", line 43
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pika-0.9.12.egg-info'...
Listing './lib/python3.5/site-packages/pika_simple_daemon'...
Compiling './lib/python3.5/site-packages/pika_simple_daemon/queue.py'...
***   File "./lib/python3.5/site-packages/pika_simple_daemon/queue.py", line 211
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pika_simple_daemon/tests.py'...
***   File "./lib/python3.5/site-packages/pika_simple_daemon/tests.py", line 35
    print queue_name
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pika_simple_daemon-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
